src/app/pages/player/player.page.scss
ion-content{
  --offset-top: var(--ion-safe-area-top) * -1!important;
}

.loader{
  position: fixed;
  top:50%;
  left:50%;
  transform: translate(-50%, -50%);
}

ion-card{
  background:white;
  box-shadow: none;
  filter: drop-shadow(0 4px 16px rgba(0,0,0,0.12));
}

.reader-progress{
  width: 100%;
}

.reader{
  position: absolute;
  height:100%;
  width: 100%;
  opacity: 1;
  transition: opacity .3s ease;
  background: var(--ion-color-inria-grey);

  &.loading{
    opacity: 0;
  }
  .reader-slider{
    position: absolute;
    height:100%;
    width: 100%;
  }
}

.page-wrapper{
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  padding: 4%;
  text-align: left;

  .page-header{
    margin-bottom: 10px;
    ion-icon{
      display: inline-block;
      vertical-align: middle;
      width: 1em;
      margin-right: .2em;
    }

    .title{
      display: inline-block;
      vertical-align: middle;
      width: calc(100% - 3em);
      margin: 0;

      h1{
        margin: 0;
        font-size: 17px;
      }

      .breadcrumb{
        font-size: 12px;
        span{
          color: var(--ion-color-inria);
        }
      }
    }
  }

  .page-content{
    display: flex;
    flex-grow: 1;
    overflow: hidden;

    ion-card, course-choice, simple-question{
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      margin: 0;
    }

    simple-question{
      margin-bottom: 10px;
    }

    &-chapter{
      .chapter-container{
        display: flex;
        flex-direction: column;
        width: 100%;
      }

      .title-wrapper{
        width: 100%;
        margin: 0 auto 0 -1em;
        background: var(--ion-color-inria);
        clip-path: polygon(0 0, 100% 10%, 100% 90%, 0 100%);

        .title-container {
          padding: 1em;

          .number{
            color: white;
          }

          .title {
            min-height: 3em;
            color: white;
            font-weight: 400;
            line-height: 1.2;
          }
        }
      }

      ion-card-content{
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        justify-content: space-evenly;
        padding: 1em;
        overflow: hidden;
      }

      ion-grid{
        display: flex;
        flex-grow: 0;
        margin: 0;

        ion-row{
          flex-grow: 1;
          align-items: center;
        }
      }

      .chapter-spec-icon{
        font-size: 2em;
        line-height: 1;
      }

      .chapter-spec-value{
        font-weight: 700;
      }

      .chapter-objectives{
        overflow: auto;

        &-label{
          display: inline-block;
          width: fit-content;
          font-size: 1rem;
          font-weight: 700;
          margin: 1em;
          border-bottom: 3px solid var(--ion-color-inria);
        }

        .chapter-objective{
          margin-bottom: 1em;
        }

        ion-icon{
          display: inline-block;
          vertical-align: middle;
          font-size: 2em;
          width: 1em;
          margin-right: .5em;
          color: var(--ion-color-inria);
        }

        ion-text{
          display: inline-block;
          vertical-align: middle;
          width: calc(100% - 3em);
        }
      }

      @media (max-width: 340px){
        .title-wrapper{
          padding: 3vh 0;
        }

        .chapter-spec-value{
          font-size: .9em;
        }

        ion-grid{
          ion-row{
            margin: 0 -1em;
          }
        }
      }
    }

    &-html, &-simple-question, &-next{
      position: relative;
      display: block;
      margin: 0 -4% -4% -4%;
      padding: 0 4% 4% 4%;
      overflow: auto;

      & > * {
        position: absolute;
        top:0;
        left:4%;
        width: calc(100% - 8%);
        min-height: calc(100% - 4%);
        margin-bottom: 10px;
      }
    }

    &-video{
      .video-card{
        display: flex;
        justify-content: space-evenly;
        flex-direction: column;
        flex-grow: 1;
        background: #fff;
        border-radius: 8px;
        overflow: hidden;
        // hack to fix overflow hidden safari
        -webkit-mask-image: -webkit-radial-gradient(white, black);

        & > h4 {
          margin-top: 0;
          padding: 0 16px;
        }
      }

      .video-summary{
        overflow: auto;
        flex-grow:1;
        padding: 0 16px;

        p{
          margin-top: 0;
        }
      }

    }

    &-assessment{

      ion-card-content{
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        overflow: hidden;
        p{
          flex-grow: 1;
          overflow: auto;
        }
      }

      .activity-specs{
        margin: 0;
        padding: .5em;
        font-size: 12px;

        ion-col{
          padding: 0;
        }

        ion-col:nth-child(1){
          border-right: 2px solid var(--ion-color-inria-blue);
        }
      }

      .activity-spec-icon{
        font-size: 2em;
        line-height: 1;
      }
    }

    &-next{
      .custom-card{
        text-align: center;

        ion-button{
          margin-bottom: 1em;
        }
      }

      .end-chapter-card{
        justify-content: space-evenly;
      }

      .follow-up{
        padding: 4%;
        margin: 0;
        line-height: 1.5;
      }

      .next-chapter-image{
        width: 100%;
        margin-bottom: 2%;
        padding-bottom: 56.25%;
        background: transparent no-repeat center center;
        background-size: cover;
        border-radius: 10px 10px 0 0;
      }

      .end-icon{
        margin-top: 20px;
        font-size: 60px;
      }

      .next-chapter-image + p{
        margin: 0;
        padding: 4%;
        text-align: left;
      }
    }
  }
}

/*.page-content{



}*/

.reader-action{
  display:flex;
  align-items: center;
  justify-content: space-evenly;
  line-height: 40px;
  font-size: 40px;
  cursor: pointer;
  text-align: center;
  color:var(--ion-color-inria);

  .page-action{
    display: block;
    height: 1em;
    &.disable{
      opacity: .3;
    }

    &.menu{
      color:var(--ion-color-inria-blue);
    }
  }
}

